# microwave_simulation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
docs/api/: README.md
docs/examples/: README.md
docs/guides/: analysis.md  quickstart.md  theory.md
docs/internal/: PROJECT_STRUCTURE.md
docs/internal/development/: CONTRIBUTING.md  TESTING.md
docs/internal/progress/: README.md
gui_rust/: Cargo.toml  __init__.py
gui_rust/src/: lib.rs  theme.rs  update.rs  view.rs
gui_rust/src/tests/: error_handling_tests.rs  mod.rs  performance_tests.rs  python_interaction_tests.rs  theme_tests.rs
src/: __init__.py  __main__.py  example.py
src/examples/: basic_usage.py
src/gui/: main.py
src/help/: __init__.py  help_system.py
src/impedance_matching/: __init__.py  quarter_wave.py  stub_matching.py
src/impedance_matching/core/: __init__.py
src/optimization/: calculator.py  optimizer.py
src/visualization/: __init__.py  plotter.py  result_saver.py
tests/: test_gui.py  test_help_system.py  test_impedance_matching.py  test_visualization.py
tests/integration/: test_rust_python_integration.py
tests/unit/: test_impedance_matching.py  test_optimization.py  test_visualization.py
