[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_rust>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microwave_simulation"
version = "0.1.0"
description = "A microwave circuit simulation tool"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-rf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
] 