[package]
name = "microwave_gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "microwave_gui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
iced = { version = "0.10.0", features = ["wgpu", "tokio", "debug"] }
tokio = { version = "1.42.0", features = ["full"] }
iced_wgpu = "0.11.1"
iced_winit = "0.10.1"
