[package]
name = "microwave_gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "microwave_gui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
iced = { version = "0.12.1", features = ["wgpu", "tokio", "debug"] }
tokio = { version = "1.36.0", features = ["full"] }
iced_wgpu = "0.12.1"
iced_winit = "0.12.1"
